// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonGroup [common] example testing should match snapshot(s) for fixed-width 1`] = `
<span
  className="lucid-ButtonGroup"
>
  <Button
    callbackId={0}
    isActive={false}
    key="0"
    onClick={[Function]}
    style={
      Object {
        "width": "100px",
      }
    }
  >
    Smol
  </Button>
  <Button
    callbackId={1}
    isActive={false}
    key="1"
    onClick={[Function]}
    style={
      Object {
        "width": "100px",
      }
    }
  >
    Lonnnnnnnng
  </Button>
  <Button
    callbackId={2}
    isActive={false}
    key="2"
    onClick={[Function]}
    style={
      Object {
        "width": "100px",
      }
    }
  >
    Medium
  </Button>
  <ButtonGroup.Button
    style={
      Object {
        "width": "100px",
      }
    }
  >
    Smol
  </ButtonGroup.Button>
  <ButtonGroup.Button
    style={
      Object {
        "width": "100px",
      }
    }
  >
    Lonnnnnnnng
  </ButtonGroup.Button>
  <ButtonGroup.Button
    style={
      Object {
        "width": "100px",
      }
    }
  >
    Medium
  </ButtonGroup.Button>
</span>
`;

exports[`ButtonGroup [common] example testing should match snapshot(s) for stateful 1`] = `
<span
  className="lucid-ButtonGroup"
>
  <Button
    callbackId={0}
    isActive={false}
    key="0"
    onClick={[Function]}
  >
    Zero
  </Button>
  <Button
    callbackId={1}
    isActive={false}
    key="1"
    onClick={[Function]}
  >
    One
  </Button>
  <Button
    callbackId={2}
    isActive={false}
    key="2"
    onClick={[Function]}
  >
    Two
  </Button>
  <Button
    callbackId={3}
    isActive={false}
    key="3"
    onClick={[Function]}
  >
    Three
  </Button>
  <ButtonGroup.Button>
    Zero
  </ButtonGroup.Button>
  <ButtonGroup.Button>
    One
  </ButtonGroup.Button>
  <ButtonGroup.Button>
    Two
  </ButtonGroup.Button>
  <ButtonGroup.Button>
    Three
  </ButtonGroup.Button>
</span>
`;

exports[`ButtonGroup [common] example testing should match snapshot(s) for stateless 1`] = `
<span
  className="lucid-ButtonGroup"
>
  <Button
    callbackId={0}
    isActive={false}
    key="0"
    onClick={[Function]}
  >
    Zero
  </Button>
  <Button
    callbackId={1}
    isActive={false}
    key="1"
    onClick={[Function]}
  >
    One
  </Button>
  <Button
    callbackId={2}
    isActive={false}
    key="2"
    onClick={[Function]}
  >
    Two
  </Button>
  <Button
    callbackId={3}
    isActive={false}
    key="3"
    onClick={[Function]}
  >
    Three
  </Button>
  <Button
    callbackId={4}
    isActive={false}
    key="4"
    onClick={[Function]}
  >
    Four
  </Button>
  <Button
    callbackId={5}
    isActive={false}
    isDisabled={true}
    key="5"
    onClick={[Function]}
  >
    Five
  </Button>
  <Button
    callbackId={6}
    isActive={false}
    key="6"
    onClick={[Function]}
  >
    Six
  </Button>
  <Button
    callbackId={7}
    isActive={true}
    key="7"
    onClick={[Function]}
  >
    Seven
  </Button>
  <Button
    callbackId={8}
    isActive={true}
    key="8"
    onClick={[Function]}
  >
    Eight
  </Button>
  <Button
    callbackId={9}
    isActive={false}
    key="9"
    onClick={[Function]}
  >
    Nine
  </Button>
  <ButtonGroup.Button>
    Zero
  </ButtonGroup.Button>
  <ButtonGroup.Button>
    One
  </ButtonGroup.Button>
  <ButtonGroup.Button>
    Two
  </ButtonGroup.Button>
  <ButtonGroup.Button>
    Three
  </ButtonGroup.Button>
  <ButtonGroup.Button>
    Four
  </ButtonGroup.Button>
  <ButtonGroup.Button
    isDisabled={true}
  >
    Five
  </ButtonGroup.Button>
  <ButtonGroup.Button>
    Six
  </ButtonGroup.Button>
  <ButtonGroup.Button>
    Seven
  </ButtonGroup.Button>
  <ButtonGroup.Button>
    Eight
  </ButtonGroup.Button>
  <ButtonGroup.Button>
    Nine
  </ButtonGroup.Button>
</span>
`;
